--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Meet Our Trainers</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Guided by our experienced trainers, you'll push limits and unlock your true fitness potential.</p>
 						</div>
 					</div>
 				</div>
@@ -154,9 +154,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-1.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Body Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Prawjal Burde</h3>
+									<h3>Body Trainer</h3>
+									<!-- <span>Head Strength & Conditioning Coach</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -170,9 +171,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-2.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>James Smith</h3>
-									<span>Swimming Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Pooja Desai</h3>
+									<h3>Swimming Trainer</h3>
+									<span></span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -186,9 +188,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-3.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Rohan Singh</h3>
+									<h3>High-Intensity Interval Training </h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -202,9 +205,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-4.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Ananya Iyer</h3>
+									<h3>Functional Training</h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -218,9 +222,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-5.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Vikram Chauhan</h3>
+									<h3>Group Fitness Classes</h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -234,9 +239,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-6.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Kavya Kapoor</h3>
+									<h3>Personal Training </h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -255,7 +261,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Our Programs</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 						</div>
 					</div>
 				</div>
@@ -264,7 +270,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-dumbell.svg" alt="Cycling">
 							<h3>Body Combat</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -272,7 +278,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-yoga.svg" alt="">
 							<h3>Yoga Programs</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -280,7 +286,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-cycling.svg" alt="">
 							<h3>Cycling Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -288,7 +294,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-boxing.svg" alt="Cycling">
 							<h3>Boxing Fitness</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -296,7 +302,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-swimming.svg" alt="">
 							<h3>Swimming Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -304,7 +310,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-massage.svg" alt="">
 							<h3>Massage</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -318,16 +324,18 @@
 					<div class="row">
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">About Us</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
+							<p>Beyond the noise of daily life, our fitness club offers a space where goals are achieved and lifestyles are transformed. Together, we inspire, challenge, and support your journey to a healthier, stronger you.</p>
 						</div>
 
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-								<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-								<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-map-marker"></i>[Elevate Fit Club]
+									123 Fitness Street, Wellness Avenue
+									Mumbai, Maharastra 400005</li>
+								<li><i class="icon-phone"></i>+91 98765 43210</li>
+								<li><i class="icon-envelope"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
