--- a/classes.html
+++ b/classes.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Fitness &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>ElevateFit Club</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -481,16 +481,18 @@
 					<div class="row">
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">About Us</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
+							<p>Beyond the noise of daily life, our fitness club offers a space where goals are achieved and lifestyles are transformed. Together, we inspire, challenge, and support your journey to a healthier, stronger you.</p>
 						</div>
 
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-								<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-								<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-map-marker"></i>[Elevate Fit Club]
+									123 Fitness Street, Wellness Avenue
+									Mumbai, Maharastra 400005</li>
+								<li><i class="icon-phone"></i>+91 98765 43210</li>
+								<li><i class="icon-envelope"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
