--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ElevateFit Club</title>
+	<title>Elevate Fit Club</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -120,8 +120,8 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-7">
-								<h2>Fitness &amp; Health <br>is a <b>Mentality</b></h2>
-								<p><span>Created with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" class="fh5co-site-name">FreeHTML5.co</a></span></p>
+								<h2>Fitness is a  &amp; Lifestyle <br> Health is <b>a Choice .</b></h2>
+								<p><span>Created to inspire <i class="icon-heart3"></i> your health and <a href="" class="fh5co-site-name">fitness journey.</a></span></p>
 								<span><a class="btn btn-primary" href="#">Start Your Journey</a></span>
 							</div>
 						</div>
@@ -135,8 +135,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
-							<h2>Class Schedule</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h1>Class Schedule</h1>
+							<p>On the edge of determination and strength, they train along the coast of fitness and wellness.</p>
 						</div>
 					</div>
 				</div>
@@ -160,33 +160,33 @@
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Body Building</h3>
-										<span>John Doe</span>
+										<span>Yasmin Karachiwala</span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
+										<span>Prashant Sawant</span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
+										<span>Shyam Gopalan </span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
+										<span>Sameer Jaura </span>
 									</div>
 								</div>
 							</div>
@@ -421,8 +421,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
-							<h1 class="text-center">Commit To Be Fit</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center">Embrace Your Fitness Journey</h1>
+							<p>Empowering your fitness journey with passion and purpose </p>
 						</div>
 					</div>
 				</div>
@@ -434,7 +434,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Our Programs</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>"Though apart, they train together on the path to health and strength."</p>
 						</div>
 					</div>
 				</div>
@@ -443,7 +443,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-dumbell.svg" alt="Cycling">
 							<h3>Body Combat</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Body Combat is our high-energy fitness program, blending martial arts techniques with intense cardio workouts. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -451,7 +451,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-yoga.svg" alt="">
 							<h3>Yoga Programs</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Yoga Programs offer a blend of flexibility, strength, and mindfulness, promoting physical and mental well-being. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -459,7 +459,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-cycling.svg" alt="">
 							<h3>Cycling Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Cycling Program delivers an exhilarating cardio workout, enhancing endurance, strength, and overall fitness. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -467,7 +467,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-boxing.svg" alt="Cycling">
 							<h3>Boxing Fitness</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Boxing Fitness combines powerful punches with dynamic movements, boosting strength, agility, and cardiovascular health. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -475,7 +475,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-swimming.svg" alt="">
 							<h3>Swimming Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Swimming Program provides a full-body, low-impact workout, improving endurance, strength, and flexibility. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -483,7 +483,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-massage.svg" alt="">
 							<h3>Massage</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Massage program offers therapeutic treatments to relieve muscle tension, reduce stress, and enhance relaxation. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -496,7 +496,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Meet Our Trainers</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Guided by our experienced trainers, you'll push limits and unlock your true fitness potential.</p>
 						</div>
 					</div>
 				</div>
@@ -505,9 +505,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-1.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Body Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Prawjal Burde</h3>
+									<span>Head Strength & Conditioning Coach
+									</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -521,9 +522,9 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-2.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>James Smith</h3>
-									<span>Swimming Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Pooja Desai </h3>
+									<span>Yoga & Wellness Instructor</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -537,9 +538,9 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-3.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Rohan Singh</h3>
+									<span>Personal Training Specialist</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -553,9 +554,9 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-4.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Ananya Iyer</h3>
+									<span>Group Fitness Coordinator</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -569,9 +570,9 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-5.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Vikram Chauhan</h3>
+									<span> Functional Fitness Coach</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -585,9 +586,9 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-6.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Kavya Kapoor </h3>
+									<span> Nutrition and Wellness Consultant</span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -622,7 +623,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Pricing Plan</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Separated by distance, united in the quest for fitness and well-being.</p>
 						</div>
 					</div>
 				</div>
@@ -632,7 +633,7 @@
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Starter</h2>
 							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+							<p>Far beyond the limits of ordinary, our pricing plans bring you closer to your fitness goals.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
 								<li class="color">10 Swimming Lesson</li>
@@ -650,7 +651,7 @@
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Basic</h2>
 							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+							<p>Miles away from average, our flexible plans are designed to fit your unique fitness journey.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
 								<li class="color">10 Swimming Lesson</li>
@@ -668,7 +669,7 @@
 						<div class="price-box animate-box popular">
 							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
 							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+							<p>Beyond the horizon of typical memberships, our plans are tailored for every fitness level.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
 								<li class="color">10 Swimming Lesson</li>
@@ -686,7 +687,7 @@
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Unlimited</h2>
 							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+							<p>Far from the standard, our pricing plans offer you the best value on your path to health and wellness.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
 								<li class="color">10 Swimming Lesson</li>
@@ -787,16 +788,18 @@
 					<div class="row">
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">About Us</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
+							<p>Beyond the noise of daily life, our fitness club offers a space where goals are achieved and lifestyles are transformed. Together, we inspire, challenge, and support your journey to a healthier, stronger you.</p>
 						</div>
 
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-								<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-								<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-map-marker"></i>[Elevate Fit Club]
+									123 Fitness Street, Wellness Avenue
+									Mumbai, Maharastra 400005</li>
+								<li><i class="icon-phone"></i>+91 98765 43210</li>
+								<li><i class="icon-envelope"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
