--- a/index.html
+++ b/index.html
@@ -720,10 +720,10 @@
 									<a href="#"><img class="img-responsive" src="images/blog-1.jpg" alt=""></a>
 								</div>
 								<div class="desc">
-									<h3><a href=""#>Starting new session of body building this summer</a></h3>
-									<span class="posted_by">Posted by: Admin</span>
+									<h3><a href=""#>Starting new session of <b>Body Trainer</b> this summer</a></h3>
+									<span class="posted_by">Posted by : Prajwal Burde</span>
 									<span class="comment"><a href="">21<i class="icon-bubble22"></i></a></span>
-									<p>Far far away, behind the word mountains</p>
+									<p> Expert guidance for tailored fitness and muscle growth.</p>
 									<a href="#" class="btn btn-default">Read More</a>
 								</div> 
 							</div>
@@ -731,13 +731,13 @@
 						<div class="col-md-12 col-md-offset-0">
 							<div class="fh5co-blog animate-box">
 								<div class="inner-post">
-									<a href="#"><img class="img-responsive" src="images/blog-1.jpg" alt=""></a>
+									<a href="#"><img class="img-responsive" src="images/blog-2.jpg" alt=""></a>
 								</div>
 								<div class="desc">
-									<h3><a href=""#>Starting new session of body building this summer</a></h3>
-									<span class="posted_by">Posted by: Admin</span>
-									<span class="comment"><a href="">21<i class="icon-bubble22"></i></a></span>
-									<p>Far far away, behind the word mountains</p>
+									<h3><a href=""#>Starting new session of <b>Swimming Trainer</b> this summer</a></h3>
+									<span class="posted_by">Posted by : Pooja Desai</span>
+									<span class="comment"><a href="">25<i class="icon-bubble22"></i></a></span>
+									<p> Professional instruction for technique, endurance, and safety.</p>
 									<a href="#" class="btn btn-default">Read More</a>
 								</div> 
 							</div>
@@ -752,13 +752,13 @@
 						<div class="col-md-12 col-md-offset-0">
 							<div class="fh5co-blog animate-box">
 								<div class="meta-date text-center">
-									<p><span class="date">14</span><span>June</span><span>2016</span></p>
+									<p><span class="date">10</span><span>Jan</span><span>2025</span></p>
 								</div>
 								<div class="desc desc2">
-									<h3><a href=""#>Starting new session of body building this summer</a></h3>
-									<span class="posted_by">Posted by: Admin</span>
-									<span class="comment"><a href="">21<i class="icon-bubble22"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3><a href=""#>Starting new session of <b>Functional Training</b> this summer</a></h3>
+									<span class="posted_by">Posted by : Ananya Iyer</span>
+									<span class="comment"><a href="">99<i class="icon-bubble22"></i></a></span>
+									<p>Enhances everyday movements with practical strength and flexibility.</p>
 									<a href="#" class="btn btn-default">Read More</a>
 								</div> 
 							</div>
@@ -766,13 +766,13 @@
 						<div class="col-md-12 col-md-offset-0">
 							<div class="fh5co-blog animate-box">
 								<div class="meta-date text-center">
-									<p><span class="date">13</span><span>June</span><span>2016</span></p>
+									<p><span class="date">15</span><span>Jan</span><span>2025</span></p>
 								</div>
 								<div class="desc desc2">
-									<h3><a href=""#>Starting new session of body building this summer</a></h3>
-									<span class="posted_by">Posted by: Admin</span>
-									<span class="comment"><a href="">21<i class="icon-bubble22"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3><a href=""#>Starting new session of <b>Group Fitness Classes</b> this summer</a></h3>
+									<span class="posted_by">Posted by : Vikram Chauhan</span>
+									<span class="comment"><a href="">17<i class="icon-bubble22"></i></a></span>
+									<p>Energizing workouts that motivate and build community</p>
 									<a href="#" class="btn btn-default">Read More</a>
 								</div> 
 							</div>
