--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,9 @@
 		<!-- end:fh5co-hero -->
 		<div id="fh5co-contact">
 			<div class="container">
-				<form action="#">
+				<form action="https://api.web3forms.com/submit" method="POST">
+					<input type="hidden" name="access_key" value="a6229aaf-c553-4d55-9327-1e59f6df59d2
+					">
 					<div class="row">
 						<div class="col-md-6 animate-box">
 							<h3 class="section-title">Our Address</h3>
@@ -147,22 +149,22 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Name">
+										<input type="text" class="form-control" name="name" placeholder="Name">
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Email">
+										<input type="text" class="form-control" name="email" placeholder="Email">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+										<textarea name="" class="form-control" id="" cols="30" rows="7"  name="message" placeholder="Message"></textarea>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Send Message" class="btn btn-primary">
+										<input type="submit"  name="submit" value="Send Message" class="btn btn-primary">
 									</div>
 								</div>
 							</div>
