--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@
 								<li class="color">5 Massage</li>
 								<li>10 Body Building</li>
 							</ul>
-							<a href="#" class="btn btn-default">Select Plan</a>
+							<!-- <a href="#" class="btn btn-default">Select Plan</a> -->
 						</div>
 					</div>
 
@@ -1320,7 +1320,7 @@
 								<li class="color">5 Massage</li>
 								<li>10 Body Building</li>
 							</ul>
-							<a href="#" class="btn btn-default">Select Plan</a>
+							<!-- <a href="#" class="btn btn-default">Select Plan</a> -->
 						</div>
 					</div>
 
@@ -1339,7 +1339,7 @@
 								<li class="color">5 Massage</li>
 								<li>10 Body Building</li>
 							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
+							<!-- <a href="#" class="btn btn-select-plan btn-sm">Select Plan</a> -->
 						</div>
 					</div>
 
@@ -1358,7 +1358,7 @@
 								<li class="color">5 Massage</li>
 								<li>10 Body Building</li>
 							</ul>
-							<a href="#" class="btn btn-default">Select Plan</a>
+							<!-- <a href="#" class="btn btn-default">Select Plan</a> -->
 						</div>
 					</div>
 				</div>
