--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 		<!-- end:fh5co-hero -->
 		<div id="fh5co-contact">
 			<div class="container">
-				<form action="https://api.web3forms.com/submit" method="POST">
+				<form action="https://formspree.io/f/xqakzzge" method="POST">
 					
 					<div class="row">
 						<div class="col-md-6 animate-box">
